force-app/main/default/objects/Renewal_Escalation_Log__c/Renewal_Escalation_Log__c.object-meta.xml
<CustomObject>
    <description>Stores escalation records for renewal opportunities, tracking escalation dates, assigned managers, and escalation notes for audit and management purposes.</description>
    <fields>
        <fullName>Renewal_Escalation_Log_EscalatedTo__c</fullName>
        <description>User to whom the escalation was assigned.</description>
        <label>Escalated To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Renewal_Escalation_Logs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Renewal_Escalation_Log_EscalationDate__c</fullName>
        <description>Date on which the escalation was created.</description>
        <label>Escalation Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Renewal_Escalation_Log_Notes__c</fullName>
        <description>Notes or reason for escalation.</description>
        <label>Notes</label>
        <type>TextArea</type>
        <length>255</length>
    </fields>
    <fields>
        <fullName>Renewal_Escalation_Log_Opportunity__c</fullName>
        <description>Opportunity that was escalated.</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Renewal_Escalation_Logs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Renewal Escalation Log</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>REL-{000000}</displayFormat>
        <label>Escalation Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Renewal Escalation Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>