force-app/main/default/objects/Renewal_Escalation_Log__c/fields/Escalated_To__c.field-meta.xml
<CustomField>
    <fullName>Escalated_To__c</fullName>
    <label>Escalated To</label>
    <description>User (manager) to whom the renewal escalation was sent</description>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>Escalated_To_User</relationshipName>
</CustomField>