force-app/main/default/objects/Renewal_Escalation_Log__c/fields/Escalation_Date__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Date__c</fullName>
    <description>Date when the escalation occurred</description>
    <inlineHelpText>The date this escalation was created and sent to the manager</inlineHelpText>
    <label>Escalation Date</label>
    <type>Date</type>
</CustomField>