force-app/main/default/objects/Renewal_Escalation_Log__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Long Text Area field on Renewal_Escalation_Log__c to store escalation notes</description>
    <type>LongTextArea</type>
    <length>32000</length>
    <visible>true</visible>
</CustomField>