force-app/main/default/objects/Renewal_Escalation_Log__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Renewal Escalation Logs</relationshipLabel>
    <relationshipName>Renewal_Escalation_Logs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>